@@ -3,7 +3,8 @@
  *
  * Copyright (C) 1990, 1991 John W. Eaton.
  * Copyright (C) 1994, 1995 Graeme W. Wilford. (Wilf.)
- * Copyright (C) 2001, 2002, 2003, 2004, 2006, 2007, 2008, 2009 Colin Watson.
+ * Copyright (C) 2001, 2002, 2003, 2004, 2006, 2007, 2008, 2009, 2010, 2011
+ *               Colin Watson.
  *
  * This file is part of man-db.
  *
@@ -983,7 +984,12 @@ char *get_manpath_from_path (const char *path, int mandatory)
 		lp++;
 	}
 
-	assert (len);
+	if (!len)
+		/* No path elements in configuration file or with
+		 * appropriate subdirectories.
+		 */
+		return xstrdup ("");
+
 	manpathlist = xmalloc (len);
 	*manpathlist = '\0';
 
