@@ -1,0 +1,21 @@
+#! /bin/sh
+
+# Test for:
+#   http://bugs.debian.org/608490
+
+: ${srcdir=.}
+. "$srcdir/testlib.sh"
+
+: ${MAN=man}
+
+init
+fake_config /usr/share/man
+
+write_page file 1 "$tmpdir/file.1" UTF-8 '' '' 'file \- test'
+chmod +x "$tmpdir/file.1"
+PATH="$PATH:$tmpdir" MANPATH="$tmpdir/usr/share/man" run $MAN \
+	-C "$tmpdir/manpath.config" "$tmpdir/file.1" >/dev/null
+code=$?
+expect_pass 'executable page on path' 'test "$code" = 0'
+
+finish
